<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="73dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/quget" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="959dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/group_2" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginTop="100dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/Welcone"
                    android:textColor="@color/darkgrey"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginTop="200dp"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <Button
                    android:id="@+id/startedbtn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginTop="300dp"
                    android:textSize="18dp"
                    android:background="@color/purple"
                    android:text="@string/let_s_get_started"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Signin"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="425dp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Signup"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="40dp"
                    tools:ignore="RtlCompat" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
